// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a FAVSCREEN_NAME_FAVORITE action 1`] = `
Object {
  "payload": Object {
    "gender": "male",
    "name": Object {
      "isFavorite": true,
      "name": "artur",
    },
  },
  "type": "FAVSCREEN_NAME_FAVORITE",
}
`;

exports[`creates a FAVSCREEN_NAME_OPEN action 1`] = `
Object {
  "type": "FAVSCREEN_NAME_OPEN",
}
`;

exports[`creates a FAVSCREEN_SCROLL action 1`] = `
Object {
  "type": "FAVSCREEN_SCROLL",
}
`;

exports[`creates a FAVSCREEN_VIEW action 1`] = `
Object {
  "type": "LISTSCREEN_VIEW",
}
`;

exports[`creates a FETCH_NAMES_SUCCESS action 1`] = `
Object {
  "payload": Object {
    "gender": "male",
    "names": Array [
      Object {
        "isFavorite": true,
        "name": "artur",
      },
    ],
  },
  "type": "FETCH_NAMES_SUCCESS",
}
`;

exports[`creates a LISTSCREEN_NAME_OPEN action 1`] = `
Object {
  "type": "LISTSCREEN_NAME_OPEN",
}
`;

exports[`creates a LISTSCREEN_NAME_UNFAVORITE action 1`] = `
Object {
  "payload": Object {
    "gender": "male",
    "name": Object {
      "isFavorite": false,
      "name": "artur",
    },
  },
  "type": "LISTSCREEN_NAME_UNFAVORITE",
}
`;

exports[`creates a LISTSCREEN_SCROLL action 1`] = `
Object {
  "type": "LISTSCREEN_SCROLL",
}
`;

exports[`creates a LISTSCREEN_VIEW action 1`] = `
Object {
  "type": "FAVSCREEN_VIEW",
}
`;
